Package: future.batchtools
==========================

Version: 0.8.1-9000 [2020-04-09]

NEW FEATURES:

 * It is now possible to control the working directory 'work.dir' setting for
   batchtools registries used by batchtools futures.  This can be done by
   specifying the new named list argument 'registry' when setting the plan()
   for any of the 'batchtools_*' backends, e.g.
   plan(batchtools_sge, registry = list(work.dir = "~")).  The default is
   registry = list(work.dir = NULL), which corresponds to the previous behavior
   where the registry's working directory is set to the current working
   directory of R _when_ the batchtools future is created.


Version: 0.8.1 [2019-09-30]

BUG FIXES:

 * print() for BatchtoolsFuture would produce an error if the underlying
   batchtools Registry was incomplete.


Version: 0.8.0 [2019-05-04]

NEW FEATURES:

 * Setting option 'future.delete' to FALSE will now prevent removal of the
   batchtools registry folders.

 * When a batchtools job expires, for instance when the scheduler terminates
   it because the job was running out of its allocated resources, then a
   BatchtoolsFutureError is produced which by default outputs the tail of the
   output logged by batchtools.  The default number of lines displayed from
   the end is now increased from six to 48 - a number which now can be set
   via option 'future.batchtools.expiration.tail'.
   
 * Now a more informative error message is produced if a batchtools *.tmpl
   template file was not found.

 * Debug messages are now prepended with a timestamp.

BUG FIXES:

 * Argument 'workers' could not be a function.

 * Argument 'workers' of type character was silently accepted and effectively
   interpreted as workers = length(workers).


Version: 0.7.2 [2018-12-03]

DOCUMENTATION:

 * Add a simple example(future_custom).

FIXES:

 * Made internal code agile to upcoming changes in the future package on
   how a captured error is represented.

SOFTWARE QUALITY:
