@@ -32,15 +32,53 @@ nbrOfWorkers.batchtools <- function(evaluator) {
 
     name <- cf$name
     if (is.null(name)) name <- cf$Name
-    if (is.null(name)) return(Inf)
 
     ## Uni-process backends
     if (name %in% c("Local", "Interactive")) return(1L)
 
-    ## Cluster backends (infinite queue available)
-    if (name %in% c("TORQUE", "Slurm", "SGE", "OpenLava", "LSF")) return(Inf)
+    ## Cluster backends (with a scheduler queue)
+    if (name %in% c("TORQUE", "Slurm", "SGE", "OpenLava", "LSF")) {
+      return(availableHpcWorkers())
+    }
   }
 
-  ## If still not known, assume Inf
-  Inf
+  ## If still not known, assume a generic HPC scheduler
+  availableHpcWorkers()
+}
+
+
+## Number of available workers in an HPC environment
+##
+## @return (numeric) A positive integer or +Inf.
+availableHpcWorkers <- function() {
+  name <- "future.batchtools.workers"
+  value <- getOption(name, default = NULL)
+  if (!is.null(value)) {
+    if (!is.numeric(value) || length(value) != 1L ||
+        is.na(value) || value < 1.0) {
+      stop(sprintf(
+        "Option %s does not specify a value >= 1: %s",
+        sQuote(name), sQuote(value)
+      ))
+    }
+    value <- floor(value)
+    return(value)
+  }
+  
+  name <- "R_FUTURE_BATCHTOOLS_WORKERS"
+  value0 <- Sys.getenv(name, "")
+  if (nzchar(value0)) {
+    value <- as.numeric(value0)
+    if (is.na(value) || value < 1.0) {
+      stop(sprintf(
+        "Environment variable %s does not specify a value >= 1: %s",
+        sQuote(name), sQuote(value0)
+      ))
+    }
+    value <- floor(value)
+    return(value)
+  }
+
+  ## Assume an infinite number HPC queue slots
+  +Inf
 }
